# -DA6-Decision-Analysis

./: README.md
Project 1 - UTA, AHP/: README.md  pyproject.toml
Project 1 - UTA, AHP/data/: dataset_description.md  preferences.csv
Project 1 - UTA, AHP/data/preferences/: selected_consistent_subset.csv
Project 1 - UTA, AHP/data/processed/: dataset.csv  european_capitals.json
Project 1 - UTA, AHP/reports/: AHP_report.ipynb  UTA_AHP_comparison.ipynb  UTA_full_report.ipynb
Project 1 - UTA, AHP/src/: find_dominated.py  prepare_dataset.py
Project 1 - UTA, AHP/src/UTA_inconsistencies_resolving/: uta.py  (+1 more)
Project 2 - Preference Learning/: README.md  pyproject.toml
Project 2 - Preference Learning/layers/: __init__.py  criterion_layer_combine.py  criterion_layer_spread.py  leaky_hard_sigmoid.py  monotonic_layer.py  norm_layer.py  threshold_layer.py  uta.py
Project 2 - Preference Learning/notebooks/: report.ipynb
Project 2 - Preference Learning/reports/: report.html
Project-2-Preference-learning/: pyproject.toml  xgboost.ipynb
Project-3-Promethee-Electre/: Report-Promethee-Electre.docx  pyproject.toml
Project-3-Promethee-Electre/Electre-exercises/: 06_electre_tri.ipynb  preference.csv  utils.py
Project-3-Promethee-Electre/Electre-exercises/dataset-uta/: boundary_profiles.csv  preference_information.csv  preferences.csv
Project-3-Promethee-Electre/promethee-exercises/: 01_promethee.ipynb  dataset.csv  preference.csv  requirements.txt  utils.py
Project-3-Promethee-Electre/promethee-exercises/dataset-uta/: criteria_metadata.csv  preference_information.csv
(+19 files in other folders)
