[project]
name = "project-2-preference-learning"
version = "0.1.0"
description = "Decision Analysis — Project 2: comparison of preference learning methods (XGBoost, ANN-UTADIS, deep MLP)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "torch>=2.3.0",
    "tqdm>=4.66.0",
    "xgboost>=3.2.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
