[project]
name = "project-3-promethee-electre"
version = "0.1.0"
description = "Decision Analysis — Project 3: PROMETHEE and ELECTRE Tri-B analysis on UTA dataset."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pygraphviz>=1.14",
]

[tool.uv]
package = false
